Improve the submission of distributed training on SLURM:
- use the configuration of the experiment to deduce the number of nodes and GPUs to allocate on SLURM, making sure they are aligned

- move SLURM config from bash to VISSL default config, allowing SLURM options (like other options) to be configured with hydra overrides

- use submitit with Python instead of bash, and transform the bash code to python code into "tools/run_distributed_engines.py"

--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -766,7 +766,7 @@ config:
   # ----------------------------------------------------------------------------------- #
   CHECKPOINT:
     DIR: "."
-    # for the checkpoinint, we can append the RUN_ID if we want
+    # for the checkpoint, we can append the RUN_ID if we want
     APPEND_DISTR_RUN_ID: False
     # what is the checkpointing backend. VISSL supports disk backend. If user wants to
     # add more backend like AWS etc., they can do so.
@@ -844,6 +844,30 @@ config:
     # activation checkpointing and sometimes saving the memory from the pytorch gradient
     # buckets.
     MANUAL_GRADIENT_REDUCTION: False
+
+  # ----------------------------------------------------------------------------------- #
+  # DISTRIBUTED TRAINING ON SLURM: Additional options for SLURM node allocation
+  # (options like number of nodes and number of GPUs by node are taken from DISTRIBUTED)
+  # ----------------------------------------------------------------------------------- #
+  SLURM:
+    # Whether or not to run the job on SLURM
+    ENABLED: false
+    # Name of the job on SLURM
+    NAME: "vissl"
+    # Comment of the job on SLURM
+    COMMENT: "vissl job"
+    # Partition of SLURM on which to run the job
+    PARTITION: "learnfair"
+    # Where the logs produced by the SLURM jobs will be output
+    LOG_FOLDER: "."
+    # Maximum number of hours needed by the job to complete. Above this limit, the job might be pre-empted.
+    TIME_HOURS: 72
+    # Additional constraints on the hardware of the nodes to allocate (example 'volta' to select a volta GPU)
+    CONSTRAINT: ""
+    # GB of RAM memory to allocate for each node
+    MEM_GB: 250
+    # TCP port on which the workers will synchronize themselves with torch distributed
+    PORT_ID: 40050
 
   # ----------------------------------------------------------------------------------- #
   # SVM (benchmark)
