--- a/configs/config/pretrain/swav/models/vit_b16_deit.yaml
+++ b/configs/config/pretrain/swav/models/vit_b16_deit.yaml
@@ -14,9 +14,10 @@ config:
           NUM_HEADS: 12
           HIDDEN_DIM: 768
           MLP_DIM: 3072
-          DROPOUT_RATE: 0.1
+          DROPOUT_RATE: 0
           ATTENTION_DROPOUT_RATE: 0
           CLASSIFIER: token
+          DROP_PATH_RATE: 0.1
     HEAD:
       PARAMS: [
       ["swav_head", {"dims": [768, 2048, 128], "use_bn": True, "num_clusters":
