--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -273,9 +273,12 @@ config:
           NUM_HEADS: 16
           HIDDEN_DIM: 1024
           MLP_DIM: 4096
-          DROPOUT_RATE: 0.1
+          DROPOUT_RATE: 0
           ATTENTION_DROPOUT_RATE: 0
           CLASSIFIER: token
+          # Parameters for DeIT
+          # Stochastic depth
+          # DROP_PATH_RATE:
           # Parameter for hybrid model. E.g. resnet18, resnet34, resnet50, etc.
           # HYBRID:
           # Parameters for attention modules. Default is vanilla
