--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -280,7 +280,7 @@ config:
           # Stochastic depth
           # DROP_PATH_RATE:
           # Parameter for hybrid model. E.g. resnet18, resnet34, resnet50, etc.
-          # HYBRID:
+          HYBRID:
           # Parameters for attention modules. Default is vanilla
           # self-attention for every layer. To be implemented.
 #          ATTENTION_MODULES:
