--- a/configs/config/benchmark/linear_image_classification/imagenet1k/models/vit_hybrid_s16.yaml
+++ b/configs/config/benchmark/linear_image_classification/imagenet1k/models/vit_hybrid_s16.yaml
@@ -35,7 +35,7 @@ config:
           std: [0.229, 0.224, 0.225]
     TEST:
       DATA_SOURCES: [disk_folder]
-#      DATA_PATHS: ["<path to test folder>"]
+      #      DATA_PATHS: ["<path to test folder>"]
       LABEL_SOURCES: [disk_folder]
       DATASET_NAMES: [imagenet1k_folder]
       BATCHSIZE_PER_REPLICA: 2048
@@ -59,15 +59,16 @@ config:
           IMAGE_SIZE: 224
           PATCH_SIZE: 16
           NUM_LAYERS: 12
-          NUM_HEADS: 12
-          HIDDEN_DIM: 768
-          MLP_DIM: 3072
-          DROPOUT_RATE: 0.1
+          NUM_HEADS: 6
+          HIDDEN_DIM: 384
+          MLP_DIM: 1536
+          DROPOUT_RATE: 0
           ATTENTION_DROPOUT_RATE: 0
           CLASSIFIER: token
+          HYBRID: resnet18
     HEAD:
       PARAMS: [
-      ["mlp", {"dims": [768, 1000]}],
+      ["mlp", {"dims": [384, 1000]}],
       ]
     WEIGHTS_INIT:
       PARAMS_FILE: "specify the model weights"
