--- a/configs/config/pretrain/swav/models/vit_hybrid_resnet18_b16.yaml
+++ b/configs/config/pretrain/swav/models/vit_hybrid_resnet18_b16.yaml
@@ -18,10 +18,10 @@ config:
           ATTENTION_DROPOUT_RATE: 0
           CLASSIFIER: token
           DROP_PATH_RATE: 0.1
+          HYBRID: resnet18
     HEAD:
       PARAMS: [
-      ["swav_head", {"dims": [768, 2048, 258fnhhvkulfkbljtcu], "use_bn": True,
-                     "num_clusters":
+      ["swav_head", {"dims": [768, 2048, 256], "use_bn": True, "num_clusters":
         [3000]}],
       ]
     TEMP_FROZEN_PARAMS_ITER_MAP: [
