--- a/configs/config/pretrain/swav/optimization/swav_4node_deit.yaml
+++ b/configs/config/pretrain/swav/optimization/swav_4node_deit.yaml
@@ -20,17 +20,19 @@ config:
     AUTO_RESUME: True
     CHECKPOINT_FREQUENCY: 10
   DATA:
-    NUM_DATALOADER_WORKERS: 5
+    NUM_DATALOADER_WORKERS: 6
     TRAIN:
       DATA_SOURCES: [disk_folder]
       DATASET_NAMES: [imagenet1k_folder]
-      BATCHSIZE_PER_REPLICA: 64
       LABEL_TYPE: sample_index    # just an implementation detail. Label isn't used
       TRANSFORMS:
-        - name: ImgReplicatePil
-          num_times: 2
-        - name: RandomResizedCrop
-          size: 224
+        - name: ImgPilToMultiCrop
+          total_num_crops: 2
+          size_crops: [224]
+          num_crops: [2]
+          crop_scales: [[0.14, 1]]
+        #        - name: RandomResizedCrop
+        #          size: 224
         - name: RandomHorizontalFlip
           p: 0.5
         - name: ImgPilColorDistortion
@@ -43,7 +45,7 @@ config:
         - name: Normalize
           mean: [0.485, 0.456, 0.406]
           std: [0.229, 0.224, 0.225]
-      COLLATE_FUNCTION: moco_collator
+      COLLATE_FUNCTION: multicrop_collator
       MMAP_MODE: True
       COPY_TO_LOCAL_DISK: False
       COPY_DESTINATION_DIR: /tmp/imagenet1k/
@@ -64,30 +66,8 @@ config:
   #          mean: [0.485, 0.456, 0.406]
   #          std: [0.229, 0.224, 0.225]
   MODEL:
-    TRUNK:
-      NAME: vision_transformer
-      TRUNK_PARAMS:
-        VISION_TRANSFORMERS:
-          IMAGE_SIZE: 224
-          PATCH_SIZE: 16
-          NUM_LAYERS: 12
-          NUM_HEADS: 12
-          HIDDEN_DIM: 768
-          MLP_DIM: 3072
-          DROPOUT_RATE: 0
-          ATTENTION_DROPOUT_RATE: 0
-          CLASSIFIER: token
-          HYBRID: resnet18
-    HEAD:
-      PARAMS: [
-      ["swav_head", {"dims": [768, 2048, 256], "use_bn": True, "num_clusters":
-        [3000]}],
-      ]
-    TEMP_FROZEN_PARAMS_ITER_MAP: [
-    ['module.heads.0.prototypes0.weight', 313],
-    ]
     SYNC_BN_CONFIG:
-      CONVERT_BN_TO_SYNC_BN: False
+      CONVERT_BN_TO_SYNC_BN: True
       SYNC_BN_TYPE: apex
       GROUP_SIZE: 8
     AMP_PARAMS:
@@ -95,12 +75,17 @@ config:
       # USE_AMP: True
       AMP_ARGS: {"opt_level": "O1"}
   LOSS:
-    name: moco_loss
-    moco_loss:
-      embedding_dim: 128
-      queue_size: 65536
-      momentum: 0.999
-      temperature: 0.2
+    name: swav_loss
+    swav_loss:
+      temperature: 0.1
+      use_double_precision: False
+      normalize_last_layer: True
+      num_iters: 3
+      epsilon: 0.04
+      crops_for_assign: [0, 1]
+      queue:
+        queue_length: 3072
+        start_iter: 0
   OPTIMIZER:
     name: adamw
     weight_decay: 0.05
@@ -113,7 +98,7 @@ config:
       lr:
         auto_lr_scaling:
           auto_scale: True
-          base_value: 0.0005
+          base_value: 0.001
           base_lr_batch_size: 4096
         #        auto_lr_scaling: # learning rate is automatically scaled based on batch size
         #          auto_scale: true
@@ -123,13 +108,13 @@ config:
         schedulers:
           - name: linear
             start_value: 0.0
-            end_value: 0.003
+            end_value: 0.001
           - name: cosine
-            start_value: 0.003
+            start_value: 0.001
             end_value: 0
         interval_scaling: [rescaled, rescaled]
         update_interval: step
-        lengths: [0.1, 0.9]
+        lengths: [0.03, 0.97]
   GRAD_CLIP:
     USE_GRAD_CLIP: True
   METERS:
