--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,3 +5,18 @@ sphinx_rtd_theme
 sphinx_markdown_tables
 mock
 numpy
+opencv-python
+tensorboard==1.15.0
+hydra-core>=1.0
+faiss>=1.5.3
+cython
+scikit-learn
+parameterized==0.7.4
+numpy>=1.15
+tabulate
+pycocotools>=2.0.1
+fvcore
+fairscale
+git+git://github.com/facebookresearch/ClassyVision.git
+https://download.pytorch.org/whl/cpu/torch-1.5.0%2Bcpu-cp37-cp37m-linux_x86_64.whl
+https://download.pytorch.org/whl/cpu/torchvision-0.6.0%2Bcpu-cp37-cp37m-linux_x86_64.whl
