--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,6 +4,7 @@ recommonmark==0.6.0
 sphinx_rtd_theme
 sphinx_markdown_tables
 mock
+numpy
 opencv-python
 tensorboard==1.15.0
 hydra-core>=1.0
@@ -11,7 +12,6 @@ faiss>=1.5.3
 cython
 scikit-learn
 parameterized==0.7.4
-numpy>=1.15
 tabulate
 pycocotools>=2.0.1
 fvcore
