--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,10 +1,13 @@
+termcolor
+numpy
+tqdm
 docutils==0.16
-Sphinx==3.0.0
+# https://github.com/sphinx-doc/sphinx/commit/7acd3ada3f38076af7b2b5c9f3b60bb9c2587a3d
+git+git://github.com/sphinx-doc/sphinx.git@7acd3ada3f38076af7b2b5c9f3b60bb9c2587a3d
 recommonmark==0.6.0
 sphinx_rtd_theme
 sphinx_markdown_tables
 mock
-numpy
 opencv-python
 tensorboard==1.15.0
 hydra-core>=1.0
