--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,8 +2,9 @@ termcolor
 numpy
 tqdm
 docutils==0.16
+sphinx
 # https://github.com/sphinx-doc/sphinx/commit/7acd3ada3f38076af7b2b5c9f3b60bb9c2587a3d
-git+git://github.com/sphinx-doc/sphinx.git@7acd3ada3f38076af7b2b5c9f3b60bb9c2587a3d
+# git+git://github.com/sphinx-doc/sphinx.git@7acd3ada3f38076af7b2b5c9f3b60bb9c2587a3d
 recommonmark==0.6.0
 sphinx_rtd_theme
 sphinx_markdown_tables
