[refactor] following remarks on review https://github.com/facebookresearch/vissl/pull/180

--- a/configs/config/benchmark/linear_image_classification/datasets/mnist.yaml
+++ b/configs/config/benchmark/linear_image_classification/datasets/mnist.yaml
@@ -8,7 +8,7 @@ config:
       DATASET_NAMES: [MNIST]
       BATCHSIZE_PER_REPLICA: 256
       TRANSFORMS:
-        - name: ImgPil2RGB
+        - name: MNISTImgPil2RGB
           size: 32
           box: [2, 2]
         - name: RandomResizedCrop
@@ -27,7 +27,7 @@ config:
       DATASET_NAMES: [MNIST]
       BATCHSIZE_PER_REPLICA: 256
       TRANSFORMS:
-        - name: ImgPil2RGB
+        - name: MNISTImgPil2RGB
           size: 32
           box: [2, 2]
         - name: ToTensor
