--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,13 +26,14 @@ repos:
     -   id: flake8
         args: ['--max-line-length=88', '--ignore=E501,E203,E266,W503,E741']
 
--   repo: https://github.com/asottile/seed-isort-config
-    rev: v2.1.0
-    hooks:
-    -   id: seed-isort-config
-        language_version: python3.6
-
--   repo: https://github.com/timothycrosley/isort
-    rev: 4.3.20
-    hooks:
-    -   id: isort
+- repo: https://github.com/pycqa/isort
+  rev: 5.6.3
+  hooks:
+    - id: isort
+      name: isort (python)
+    - id: isort
+      name: isort (cython)
+      types: [cython]
+    - id: isort
+      name: isort (pyi)
+      types: [pyi]
