--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,7 +162,7 @@ jobs:
       - run:
           name: isort
           command: |
-            isort -y -sp .
+            isort --sp . .
       - run:
           name: black
           command: |
