Remove newline before vissl imports

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,4 +10,6 @@ multi_line_output = 3
 use_parentheses = True
 lines_after_imports = 2
 known_third_party = PIL,bs4,classy_vision,cv2,detectron2,fairscale,faiss,fvcore,hydra,mock,nbconvert,nbformat,numpy,omegaconf,parameterized,pkg_resources,pycocotools,recommonmark,run_distributed_engines,scipy,setuptools,sklearn,sphinx_rtd_theme,tabulate,torch,torchvision,tqdm,utils
+ensure_newline_before_comments = True
+no_lines_before = FIRSTPARTY
 skip_glob = build/*,third-party/*,.github/*
