Removed convit configs

--- a/configs/config/pretrain/vision_transformer/supervised/supervised_16gpu_deit_b_example.yaml
+++ b/configs/config/pretrain/vision_transformer/supervised/supervised_16gpu_deit_b_example.yaml
@@ -63,7 +63,7 @@ config:
           std: [0.229, 0.224, 0.225]
   MODEL:
     TRUNK:
-      NAME: convit
+      NAME: vision_transformer
       TRUNK_PARAMS:
         VISION_TRANSFORMERS:
           IMAGE_SIZE: 224
