--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -456,7 +456,7 @@ config:
         REGNET: {}
 
         # ------------------------------------------------------------- #
-        # Vision Transformer and ConViT params. Using a name will
+        # Vision Transformer/DeiT params. Using a name will
         # override/ignore all other VISION_TRANSFORMERS parameters. Named
         # options include vit_b_32, vit_b_16, vit_l_32, vit_l_16, vit_h_14.
         # Using
