Fixed QKV bias/scale in vit

--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -480,6 +480,8 @@ config:
           # using aggressive augmentation is essentially the difference
           # between a DeiT and a ViT.
           DROP_PATH_RATE: 0
+          QKV_BIAS: False # Bias for QKV in attention layers.
+          QK_SCALE: False # Scale
 
     # ----------------------------------------------------------------------------------- #
     # MODEL HEAD
