changed names of RandAugment and AutoAugment to VisslRandAugment and VisslAutoAugment because of name conflict issues

--- a/configs/config/pretrain/vision_transformer/supervised/supervised_1gpu_vit_example.yaml
+++ b/configs/config/pretrain/vision_transformer/supervised/supervised_1gpu_vit_example.yaml
@@ -35,7 +35,7 @@ config:
           hue: 0.4
         - name: RandomResizedCrop
           size: 224
-        - name: imagenet_autoaugment
+        - name: VisslAutoAugment
         - name: ToTensor
         - name: Normalize
           mean: [0.485, 0.456, 0.406]
