--- a/configs/config/debugging/pretrain/supervised/supervised_1gpu_vision_transformer_debug_integration_cutmix.yaml
+++ b/configs/config/debugging/pretrain/supervised/supervised_1gpu_vision_transformer_debug_integration_cutmix.yaml
@@ -34,6 +34,7 @@ config:
       'label_smoothing': 0.2
       }
     TEST:
+      DATA_SOURCES: [disk_folder]
       LABEL_SOURCES: [disk_folder]
       DATASET_NAMES: [imagenet1k_debug_folder]
       BATCHSIZE_PER_REPLICA: 32
