--- a/configs/config/debugging/pretrain/supervised/supervised_deit_b_integration_debug.yaml
+++ b/configs/config/debugging/pretrain/supervised/supervised_deit_b_integration_debug.yaml
@@ -20,7 +20,7 @@ config:
         - name: RandomResizedCrop
           size: 224
         - name: RandomHorizontalFlip
-        - name: VisslRandAugment
+        - name: RandAugment
           magnitude: 9
           magnitude_std: 0.5
           increasing_severity: True
