Fix issues with unit tests, file is created

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ var/
 .hydra/
 tb_logs/
 metrics.json
+stdout.json
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
