--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ var/
 .hydra/
 tb_logs/
 metrics.json
+stdout.json
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
