--- a/configs/config/pretrain/simclr/models/efficientnet_B2.yaml
+++ b/configs/config/pretrain/simclr/models/efficientnet_B2.yaml
@@ -38,6 +38,5 @@ config:
     HEAD:
       PARAMS: [
         ######### B2 ################
-        ["mlp", {"dims": [1408, 1408], "use_relu": True}],
-        ["mlp", {"dims": [1408, 128]}],
+        ["mlp", {"dims": [1408, 1408, 128], "use_relu": True}],
       ]
