--- a/configs/config/pretrain/moco/moco_1node_resnet.yaml
+++ b/configs/config/pretrain/moco/moco_1node_resnet.yaml
@@ -57,8 +57,7 @@ config:
           ZERO_INIT_RESIDUAL: True
     HEAD:
       PARAMS: [
-        ["mlp", {"dims": [2048, 2048], "use_relu": True}],
-        ["mlp", {"dims": [2048, 128]}],
+        ["mlp", {"dims": [2048, 2048, 128], "use_relu": True}],
       ]
     SYNC_BN_CONFIG:
       CONVERT_BN_TO_SYNC_BN: False
