--- a/configs/config/pretrain/simclr/models/efficientnet_B1.yaml
+++ b/configs/config/pretrain/simclr/models/efficientnet_B1.yaml
@@ -38,6 +38,5 @@ config:
     HEAD:
       PARAMS: [
         ######### B0 AND B1 ################
-        ["mlp", {"dims": [1280, 1280], "use_relu": True}],
-        ["mlp", {"dims": [1280, 128], "use_relu": False}],
+        ["mlp", {"dims": [1280, 1280, 128], "use_relu": True}],
       ]
