--- a/configs/config/pretrain/simclr/models/resnet50_w3.yaml
+++ b/configs/config/pretrain/simclr/models/resnet50_w3.yaml
@@ -9,6 +9,5 @@ config:
           WIDTH_MULTIPLIER: 3
     HEAD:
       PARAMS: [
-        ["mlp", {"dims": [6144, 6144], "use_relu": True}],
-        ["mlp", {"dims": [6144, 128]}],
+        ["mlp", {"dims": [6144, 6144, 128], "use_relu": True}],
       ]
