--- a/configs/config/pretrain/simclr/models/resnet50_w4.yaml
+++ b/configs/config/pretrain/simclr/models/resnet50_w4.yaml
@@ -9,6 +9,5 @@ config:
           WIDTH_MULTIPLIER: 4
     HEAD:
       PARAMS: [
-        ["mlp", {"dims": [8192, 8192], "use_relu": True}],
-        ["mlp", {"dims": [8192, 128]}],
+        ["mlp", {"dims": [8192, 8192, 128], "use_relu": True}],
       ]
