--- a/configs/config/pretrain/simclr/models/resnext50.yaml
+++ b/configs/config/pretrain/simclr/models/resnext50.yaml
@@ -23,6 +23,5 @@ config:
           # WIDTH_PER_GROUP: 48
     HEAD:
       PARAMS: [
-        ["mlp", {"dims": [2048, 2048], "use_relu": True}],
-        ["mlp", {"dims": [2048, 128]}],
+        ["mlp", {"dims": [2048, 2048, 128], "use_relu": True}],
       ]
