--- a/configs/config/pretrain/simclr/simclr_8node_resnet.yaml
+++ b/configs/config/pretrain/simclr/simclr_8node_resnet.yaml
@@ -51,8 +51,7 @@ config:
           DEPTH: 50
     HEAD:
       PARAMS: [
-        ["mlp", {"dims": [2048, 2048], "use_relu": True}],
-        ["mlp", {"dims": [2048, 128]}],
+        ["mlp", {"dims": [2048, 2048, 128], "use_relu": True}],
       ]
     SYNC_BN_CONFIG:
       CONVERT_BN_TO_SYNC_BN: True
