--- a/configs/config/pretrain/vision_transformer/simclr/vit_b16.yaml
+++ b/configs/config/pretrain/vision_transformer/simclr/vit_b16.yaml
@@ -66,8 +66,7 @@ config:
           CLASSIFIER: token
     HEAD:
       PARAMS: [
-      ["mlp", {"dims": [768, 3072], "use_relu": True}],
-      ["mlp", {"dims": [3072, 128]}],
+      ["mlp", {"dims": [768, 3072, 128], "use_relu": True}],
       ]
     SYNC_BN_CONFIG:
       CONVERT_BN_TO_SYNC_BN: False
