--- a/configs/config/pretrain/pirl/models/resnet50_mlphead.yaml
+++ b/configs/config/pretrain/pirl/models/resnet50_mlphead.yaml
@@ -10,7 +10,7 @@ config:
       PARAMS: [
         # head 0 that operates on patches
         [
-            ["mlp", {"dims": [2048, 2048, 128], "use_bn": False, "use_relu": True}],
+            ["mlp", {"dims": [2048, 2048, 128], "use_bn": False, "use_relu": True, "skip_last_layer_relu_bn": False}],
             ["siamese_concat_view", {"num_towers": 9}],
             ["mlp", {"dims": [1152, 128]}],
         ],
