--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -9,9 +9,9 @@ sphinx_rtd_theme
 sphinx_markdown_tables
 mock
 opencv-python
-tensorboard==1.15.0
+tensorboard
 hydra-core>=1.0
-faiss>=1.5.3
+faiss-gpu
 cython
 scikit-learn
 parameterized==0.7.4
