--- a/configs/config/pretrain/vision_transformer/supervised/supervised_1gpu_vit_example.yaml
+++ b/configs/config/pretrain/vision_transformer/supervised/supervised_1gpu_vit_example.yaml
@@ -57,6 +57,8 @@ config:
           mean: [0.485, 0.456, 0.406]
           std: [0.229, 0.224, 0.225]
   MODEL:
+    GRAD_CLIP:
+      USE_GRAD_CLIP: True
     TRUNK:
       NAME: vision_transformer
       TRUNK_PARAMS:
