--- a/configs/config/test/integration_test/quick_barlow_twins.yaml
+++ b/configs/config/test/integration_test/quick_barlow_twins.yaml
@@ -60,10 +60,10 @@ config:
         RESNETS:
           DEPTH: 50
     HEAD:
+      # Reduced MLP size to limit memory footprint
       PARAMS: [
-        ["mlp", {"dims": [2048, 8192], "use_relu": True, "use_bn": True}],
-        ["mlp", {"dims": [8192, 8192], "use_relu": True, "use_bn": True}],
-        ["mlp", {"dims": [8192, 8192]}],
+        ["mlp", {"dims": [2048, 128], "use_relu": True, "use_bn": True}],
+        ["mlp", {"dims": [128, 128]}],
       ]
     SYNC_BN_CONFIG:
       CONVERT_BN_TO_SYNC_BN: True
