--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -882,6 +882,13 @@ config:
       momentum: 0.999
       temperature: 0.2
 
+    # ----------------------------------------------------------------------------------- #
+    #  Barlow Twins Loss (https://arxiv.org/abs/2103.03230v1)
+    # ----------------------------------------------------------------------------------- #
+    barlow_twins_loss:
+      embedding_dim: 8192
+      lambda_: 5e-3
+
   # ----------------------------------------------------------------------------------- #
   # OPTIMIZER
   # ----------------------------------------------------------------------------------- #
