[feature] improve the data_list to be able to handle use cases such as selecting a balanced sub part of the training set, and a corresponding validation set (code review)

--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -267,7 +267,7 @@ config:
       DATA_LIMIT_SAMPLING:
         SEED: 0
         BALANCED: False
-        SKIP: 0
+        SKIP_NUM_SAMPLES: 0
 
       # whether the data specified (whether file list or directory) should be copied locally
       # on the machine where training is happening.
