--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -886,8 +886,9 @@ config:
     #  Barlow Twins Loss (https://arxiv.org/abs/2103.03230v1)
     # ----------------------------------------------------------------------------------- #
     barlow_twins_loss:
+      lambda_: 0.0051
+      scale_loss: 0.024
       embedding_dim: 8192
-      lambda_: 5e-3
 
   # ----------------------------------------------------------------------------------- #
   # OPTIMIZER
