--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,10 +14,11 @@ repos:
         args: ['--branch=master']
     -   id: end-of-file-fixer
 
--   repo: https://github.com/ambv/black
-    rev: 20.8b1
+-   repo: https://github.com/psf/black
+    rev: 19.10b0 # Replace by any tag/version: https://github.com/psf/black/tags
     hooks:
-    - id: black
+      - id: black
+        language_version: python3 # Should be a command that runs python3.6+
 
 -   repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.0
