--- a/configs/config/debugging/pretrain/barlow_twins/barlow_twins_1node_resnet_imagenette_160.yaml
+++ b/configs/config/debugging/pretrain/barlow_twins/barlow_twins_1node_resnet_imagenette_160.yaml
@@ -21,7 +21,7 @@ config:
     TRAIN:
       DATA_SOURCES: [disk_folder]
       DATASET_NAMES: [imagenette_160_folder]
-      BATCHSIZE_PER_REPLICA: 128
+      BATCHSIZE_PER_REPLICA: 256
       LABEL_TYPE: sample_index    # just an implementation detail. Label isn't used
       TRANSFORMS:
         - name: ImgReplicatePil
@@ -65,16 +65,16 @@ config:
           DEPTH: 50
     HEAD:
       PARAMS: [
-        ["mlp", {"dims": [2048, 8192], "use_relu": True, "use_bn": True}],
-        ["mlp", {"dims": [8192, 8192], "use_relu": True, "use_bn": True}],
-        ["mlp", {"dims": [8192, 8192]}],
+        ["mlp", {"dims": [2048, 8192], "use_relu": True, "use_bn": True, "use_bias": False}],
+        ["mlp", {"dims": [8192, 8192], "use_relu": True, "use_bn": True, "use_bias": False}],
+        ["mlp", {"dims": [8192, 8192], "use_bias": False}],
       ]
     SYNC_BN_CONFIG:
       CONVERT_BN_TO_SYNC_BN: True
       SYNC_BN_TYPE: apex
     AMP_PARAMS:
       USE_AMP: True
-      AMP_ARGS: {"opt_level": "O1"}
+      AMP_TYPE: pytorch
   LOSS:
       name: barlow_twins_loss
       barlow_twins_loss:
@@ -82,15 +82,10 @@ config:
         scale_loss: 0.024
         embedding_dim: 8192
   OPTIMIZER:
-      name: sgd
-      use_larc: True
-      larc_config:
-        clip: False
-        trust_coefficient: 0.001
-        eps: 0.00000001
+      name: lars
       weight_decay: 0.0000015
       momentum: 0.9
-      nesterov: False
+      exclude_bias_and_norm: True
       num_epochs: 1000
       regularize_bn: False
       regularize_bias: False
