--- a/configs/config/test/integration_test/quick_barlow_twins.yaml
+++ b/configs/config/test/integration_test/quick_barlow_twins.yaml
@@ -62,8 +62,8 @@ config:
     HEAD:
       # Reduced MLP size to limit memory footprint
       PARAMS: [
-        ["mlp", {"dims": [2048, 128], "use_relu": True, "use_bn": True}],
-        ["mlp", {"dims": [128, 128]}],
+        ["mlp", {"dims": [2048, 128], "use_relu": True, "use_bn": True, "use_bias": False}],
+        ["mlp", {"dims": [128, 128], "use_bias": False}],
       ]
     SYNC_BN_CONFIG:
       CONVERT_BN_TO_SYNC_BN: True
@@ -77,15 +77,10 @@ config:
         scale_loss: 0.024
         embedding_dim: 128
   OPTIMIZER:
-      name: sgd
-      use_larc: True
-      larc_config:
-        clip: False
-        trust_coefficient: 0.001
-        eps: 0.00000001
+      name: lars
       weight_decay: 0.0000015
       momentum: 0.9
-      nesterov: False
+      exclude_bias_and_norm: True
       num_epochs: 2
       regularize_bn: False
       regularize_bias: False
