Add extra_scripts to the known_third_party option for isort

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,4 @@ lines_after_imports = 2
 ensure_newline_before_comments = True
 no_lines_before = FIRSTPARTY
 skip_glob = build/*,third-party/*,.github/*
+known_third_party = extra_scripts
