replaced add_scalar with put scalar and enabled visualization

--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -124,6 +124,7 @@ config:
     # ----------------------------------------------------------------------------------- #
     # TENSORBOARD (visualization)
     # ----------------------------------------------------------------------------------- #
+    VISUALIZATION_SAMPLE_PERIOD: -1
     TENSORBOARD_SETUP:
       # whether to use tensorboard for the visualization
       USE_TENSORBOARD: False
